--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,16 @@
 }
 
 body {
-  background-image: linear-gradient(to bottom, rgba(249, 206, 157, 1), rgba(254, 156, 212, 1));
+  background-image: linear-gradient(to bottom, rgba(51, 95, 135, 1), rgba(96, 171, 232, 1), rgb(242, 239, 173), rgb(245, 200, 64));
+
   margin:0;
   padding:20px;
-  padding-top:70px;
+  padding-top:100px;
   min-height: 100vh;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600px;
 }
+
 
 .zoom {
   max-width: 100%;
@@ -22,6 +26,17 @@ body {
   width: 100%;
   overflow: hidden;
   background-color:rgb(255, 251, 0);
+}
+
+.top {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+}
+
+.fabric{
+  width:90%;
 }
 
 .main {
@@ -70,6 +85,7 @@ body {
   top:0;
   left:0;
 }
+
 .small:nth-child(1) {
   --offset: 0;
   z-index: 4;
@@ -90,9 +106,9 @@ body {
   --offset: 4;
   z-index: 0;
 }
-
-.hidden{
-  opacity:0;
+.small:nth-child(6) {
+  --offset:4;
+  z-index: 0;
 }
 
 @media (max-width: 768px) { /*breakpoint*/
