--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,25 @@ body {
   font-weight: 600px;
 }
 
+canvas{
+  width: 100vw;
+  height:100vh;
+  position: fixed;
+  top:0;
+  left:0;
+  pointer-events: none;
+  /* z-index: -1; */
+}
+
+
+.side {
+  position: fixed;
+  z-index: 9998;
+  bottom:-400px;
+  right:-750px;
+  transform: rotate(20);
+  height:700px;
+}
 
 .zoom {
   max-width: 100%;
