--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 
   margin:0;
   padding:20px;
-  padding-top:100px;
+  padding-top:80px;
   min-height: 100vh;
   font-family: 'Poppins', sans-serif;
   font-weight: 600px;
@@ -40,14 +40,16 @@ canvas{
 
 .keyboard {
   display: flex;
-  flex-direction: row
+  flex-direction: row;
+  width: 100%;
+  justify-content: center;
 }
 
 .number {
 
 }
 
-.kf {
+.key {
   background-color:rgb(252, 255, 104);
   width:60px;
   height:60px;
@@ -60,262 +62,58 @@ canvas{
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
   /* margin-bottom:10px; */
   font-size: 30px;
 }
 
-.kf2 {
-  background-color:rgb(252, 255, 104);
-  width:60px;
-  height:60px;
-  border-radius:20%;
-  /* position: absolute;
-  bottom:2%;
-  left:4%; */
-  display: inline;
-  pointer-events: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: 20px;
-  /* margin-bottom:10px; */
-  font-size: 30px;
-}
-
-.kf3 {
-  background-color:rgb(252, 255, 104);
-  width:60px;
-  height:60px;
-  border-radius:20%;
-  /* position: absolute;
-  bottom:2%;
-  left:4%; */
-  display: inline;
-  pointer-events: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: 20px;
-  /* margin-bottom:10px; */
-  font-size: 30px;
-}
-
-.kf4 {
-  background-color:rgb(252, 255, 104);
-  width:60px;
-  height:60px;
-  border-radius:20%;
-  /* position: absolute;
-  bottom:2%;
-  left:4%; */
-  display: inline;
-  pointer-events: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: 20px;
-  /* margin-bottom:10px; */
-  font-size: 30px;
-}
-
-.kf5 {
-  background-color:rgb(252, 255, 104);
-  width:60px;
-  height:60px;
-  border-radius:20%;
-  /* position: absolute;
-  bottom:2%;
-  left:4%; */
-  display: inline;
-  pointer-events: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: 20px;
-  /* margin-bottom:10px; */
-  font-size: 30px;
-}
-
-.kf6 {
-  background-color:rgb(252, 255, 104);
-  width:60px;
-  height:60px;
-  border-radius:20%;
-  /* position: absolute;
-  bottom:2%;
-  left:4%; */
-  display: inline;
-  pointer-events: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: 20px;
-  /* margin-bottom:10px; */
-  font-size: 30px;
-}
-
-
-.kf:before {
-  background-color: black;
-  background-image: url('p1.jpg');
+.key:before {
+  background-image: url('p7.jpg');
+  background-position: center;
   /* background-size:850px; */
-  background-size:900px;
+  background-size:50%;
   background-repeat: no-repeat;
   content: attr(data-hover);
   visibility: hidden;
   opacity: 0;
-  /* width:800px; */
-    width:850px;
-  /* height:510px; */
-  height:560px;
+  width:100vw;
+  height:100vh;
   border-radius: 20px;
-  padding-left:20px;
+  /* padding-left:20px;
   padding-right:20px;
-  padding-top:40px;
+  padding-top:40px; */
   transition: opacity 1s ease-in-out;
 
-  position:absolute;
+  position: fixed;
   z-index: 1;
-  /* left:50px; */
-    left:450px;
-  /* margin-top:-660px; */
-    margin-top:-900px;
+  /* top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); */
+  top:0;
+  left:0;
+
+  pointer-events: none;
 }
 
 .kf2:before {
-  background-color: black;
-  background-image: url('p2.jpg');
-  /* background-size:850px; */
-  background-size:900px;
-  background-repeat: no-repeat;
-  content: attr(data-hover);
-  visibility: hidden;
-  opacity: 0;
-  /* width:800px; */
-    width:850px;
-  /* height:510px; */
-  height:560px;
-  border-radius: 20px;
-  padding-left:20px;
-  padding-right:20px;
-  padding-top:40px;
-  transition: opacity 1s ease-in-out;
-
-  position:absolute;
-  z-index: 1;
-  /* left:50px; */
-    left:450px;
-  /* margin-top:-660px; */
-    margin-top:-900px;
+  background-image: url('p1.jpg');
 }
 
 .kf3:before {
-  background-color: black;
-  background-image: url('p4.jpg');
-  /* background-size:850px; */
-  background-size:900px;
-  background-repeat: no-repeat;
-  content: attr(data-hover);
-  visibility: hidden;
-  opacity: 0;
-  /* width:800px; */
-    width:850px;
-  /* height:510px; */
-  height:560px;
-  border-radius: 20px;
-  padding-left:20px;
-  padding-right:20px;
-  padding-top:40px;
-  transition: opacity 1s ease-in-out;
-
-  position:absolute;
-  z-index: 1;
-  /* left:50px; */
-    left:450px;
-  /* margin-top:-660px; */
-    margin-top:-900px;
+  background-image: url('p2.jpg');
 }
 
 .kf4:before {
-  background-color: black;
-  background-image: url('p5.jpg');
-  /* background-size:850px; */
-  background-size:900px;
-  background-repeat: no-repeat;
-  content: attr(data-hover);
-  visibility: hidden;
-  opacity: 0;
-  /* width:800px; */
-    width:850px;
-  /* height:510px; */
-  height:560px;
-  border-radius: 20px;
-  padding-left:20px;
-  padding-right:20px;
-  padding-top:40px;
-  transition: opacity 1s ease-in-out;
-
-  position:absolute;
-  z-index: 1;
-  /* left:50px; */
-    left:450px;
-  /* margin-top:-660px; */
-    margin-top:-900px;
+  background-image: url('p4.jpg');
 }
 
 .kf5:before {
-  background-color: black;
-  background-image: url('p6.jpg');
-  /* background-size:850px; */
-  background-size:900px;
-  background-repeat: no-repeat;
-  content: attr(data-hover);
-  visibility: hidden;
-  opacity: 0;
-  /* width:800px; */
-    width:850px;
-  /* height:510px; */
-  height:560px;
-  border-radius: 20px;
-  padding-left:20px;
-  padding-right:20px;
-  padding-top:40px;
-  transition: opacity 1s ease-in-out;
-
-  position:absolute;
-  z-index: 1;
-  /* left:50px; */
-    left:450px;
-  /* margin-top:-660px; */
-    margin-top:-900px;
+  background-image: url('p5.jpg');
 }
 
 .kf6:before {
-  background-color: black;
-  background-image: url('p7.jpg');
-  /* background-size:850px; */
-  background-size:900px;
-  background-repeat: no-repeat;
-  content: attr(data-hover);
-  visibility: hidden;
-  opacity: 0;
-  /* width:800px; */
-    width:850px;
-  /* height:510px; */
-  height:560px;
-  border-radius: 20px;
-  padding-left:20px;
-  padding-right:20px;
-  padding-top:40px;
-  transition: opacity 1s ease-in-out;
-
-  position:absolute;
-  z-index: 1;
-  /* left:50px; */
-    left:450px;
-  /* margin-top:-660px; */
-    margin-top:-900px;
+  background-image: url('p6.jpg');
 }
 
 .kf:hover:before {
@@ -360,15 +158,32 @@ canvas{
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left:18px;
+  margin-left:8px;
+  margin-right:8px;
   margin-top:-57px;
   z-index:-1
 }
 
 
+.text{
+  width: 200px;
+  height: 100px;
+  border:1px solid;
+  padding:10px;
+  padding-top: 30px;
+  position:relative;
+}
 
+.text span{
+  color:red;
+  border:1px solid;
+  display:block;
+  padding:3px 10px;
 
-
+  position:absolute;
+  top:-3px;
+  left:0px;
+}
 
 
 .side {
@@ -413,6 +228,7 @@ canvas{
   flex-wrap: wrap;
   justify-content: center;
   gap:50px;
+  padding-top:30px;
 }
 
 .container {
@@ -470,11 +286,26 @@ canvas{
   z-index: 0;
 }
 
-@media (max-width: 768px) { /*breakpoint*/
+@media (max-width: 1000px) { /*breakpoint*/
   .container {
     width: 90%;
   }
   .photo {
     width: 90%;
+  }
+  .key {
+    width: 35px;
+    height: 35px;
+    font-size: 18px;
+  }
+  .kb {
+    width: 40px;
+    height: 42px;
+    margin-top: -34px;
+  }
+  .key:before {
+    background-size: 90%;
+    /* width: 80vw;
+    height: 28vh; */
   }
 }
